# SpotiSonic

./: .gitignore  LICENSE  README.md  pyproject.toml  spotisonic.toml
spotisonic/: config.py
tests/: test_config.py
